--- a/templates/index.html
+++ b/templates/index.html
@@ -11,49 +11,41 @@
     />
   </head>
   <body>
-    <div class="input_form">
-      <h1 id="title_header">Research labelling</h1>
-      <p>
-        You can input the abstract of any STEM related research paper, and our
-        model will provide you with the re-occuring topics of that paper.
-      </p>
-      <form action="result.html">
-        <label for="input_text">Enter your <b>abstract</b> input:</label>
-        <br />
-        <br />
-        <textarea id="input_text" rows="5" cols="50"></textarea>
-        <br />
-        <button type="submit" class="sub">Submit</button>
-      </form>
-    </div>
+    <h1>LDA Topic Modeling</h1>
+    <p>Enter an abstract to analyze:</p>
+    <form method="post" action="index.html">
+      <textarea name="abstract"></textarea>
+      <br />
+      <input type="submit" value="Submit" />
+    </form>
 
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <h6>About</h6>
-            <p class="text-justify">This project was developed by <b>Smail Rayane Moudjeb</b> and his links can be found here. 
-              This project uses artificial intelligence models to determine the topics in a given paper and label it accordingly in this implementation, 
-              only certain STEM topics can be determined. 
-              With further developements, this project will be able to predict the topics of different research papers.
-            </p>
-          </div>
+    <h1>Topic Modeling Results</h1>
+    <p id="abstract">Input Abstract:</p>
+    <script method="get" action="index.html">
+      var data = window.location.search;
+      var params = new URLSearchParams(data);
+      console.log(params);
+      var abstracts = params.get("abstracts");
+      var getData = "Abstract: " + abstracts + "<br>";
+      document.getElementById("abstract").innerHTML = getData;
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by.
-          </p>
-        </div>
+      {
+        {
+          abstract;
+        }
+      }
+    </script>
+    <p id="labels">Topic Labels:</p>
+    <ul>
+      <script>
+        var labels = params.get("label");
+        var data = window.location.search;
+        var params = new URLSearchParams(data);
+        var getData = "Label: " + { label } + ":" + { score };
+        +"<br>";
 
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="github" href="https://github.com/SRayaneM" img="icon-github" src="github.png"><i class="fa fa-github"></i></a></li>
-            <li><a class="linkedin" href="https://www.linkedin.com/in/smail-rayane-moudjeb/" img="icon-linkedin" src="linkedin.png"><i class="fa fa-linkedin"></i></a></li>   
-          </ul>
-        </div>
-      </div>
-    </div>
-</footer>
+        document.getElementById("labels").innerHTML = getData;
+      </script>
+    </ul>
   </body>
 </html>
