--- a/templates/result.html
+++ b/templates/result.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TF-IDF Topic Modeling</title>
+    <title>Topic Modeling Results</title>
   </head>
   <body>
-    <h1>TF-IDF Topic Modeling Result</h1>
-    <p>The topic label for your input is: {{ label }}</p>
+    <h1>Topic Modeling Results</h1>
+    <p id="abstract">Input Abstract:</p>
+    <script method="get" action="index.html">
+      var abstracts = params.get("abstracts");
+      var data = window.location.search;
+      var params = new URLSearchParams(data);
+      var getData = "Abstract: " + abstracts + "<br>";
+      Document.getElementById("abstract").innerHTML = getData;
+
+      {
+        {
+          abstract;
+        }
+      }
+    </script>
+    <p id="labels">Topic Labels:</p>
+    <ul>
+      {% for label, score in topics %}
+      <script>
+        var labels = params.get("label");
+        var data = window.location.search;
+        var params = new URLSearchParams(data);
+        var getData = "Label: " + labels + "<br>";
+        Document.getElementById("labels").innerHTML = getData;
+        {
+          {
+            label;
+          }
+        }
+        (":");
+        {
+          {
+            score;
+          }
+        }
+      </script>
+      {% endfor %}
+    </ul>
+    <script>
+      var data = window.location.search;
+      Document.getElementById("label").innerHTML = data;
+    </script>
   </body>
 </html>
